--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
