--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/chart.js": "^2.9.41",
     "jest": "^29.7.0"
   }
 }
